test/syntax/fail/causality/1.sync
let node f x = (a, b) where
  rec a = b + 1
  and b = a + 2
